trying to get it to look correct on iphone 11 max

--- a/css/web.css
+++ b/css/web.css
@@ -151,7 +151,7 @@ footer a:hover {
 }
 
 /* FOR MOBILE RESPONSIVENESS */
-@media all and (max-width: 812px) {
+@media all and (max-width: 1242px) {
     .social {
         display: none;
     }
